--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,10 @@
     width: 16rem;
 }
 
+.hidden{
+    display: none;
+}
+
 @media screen and (max-width: 770px) {
     .forecastBlock {
         flex-direction: column;
