--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,6 +22,13 @@
     width: 16rem;
 }
 
+#uvIndex{
+    background-color: greenyellow;
+    border-radius: 5px;
+    padding: 3px 5px;
+    width: fit-content;
+}
+
 .hidden{
     display: none;
 }
@@ -31,5 +38,10 @@
         flex-direction: column;
         width: 100%;
         margin-bottom: 5px;
+    }
+
+    #city{
+        font-size: 1.5rem;
+        color: green;
     }
 }
