--- a/CSS/style.css
+++ b/CSS/style.css
@@ -22,7 +22,7 @@
     width: 16rem;
 }
 
-#uvIndex{
+#selectACity #uvIndex{
     background-color: greenyellow;
     border-radius: 5px;
     padding: 3px 5px;
